@@ -121,7 +121,7 @@ if [ "$version" -gt 8 ] && [ "$version" -lt 11 ]; then
         --add-modules=java.xml.bind \
         ${CONTROL_JVM_OPTS}"
 
-elif [ "$version" -ge 11 ] ; then
+elif [ "$version" -ge 11 ] && [ $version -lt 17 ]; then
     CONTROL_JVM_OPTS="\
         --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED \
         --add-exports=java.base/sun.nio.ch=ALL-UNNAMED \
@@ -130,6 +130,18 @@ elif [ "$version" -ge 11 ] ; then
         --add-exports=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED \
         --add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED \
         --illegal-access=permit \
+        ${CONTROL_JVM_OPTS}"
+elif [ $version -ge 17 ] ; then
+    CONTROL_JVM_OPTS="\
+        --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED \
+        --add-exports=java.base/sun.nio.ch=ALL-UNNAMED \
+        --add-exports=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED \
+        --add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED \
+        --add-exports=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED \
+        --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED \
+        --add-opens java.base/java.nio=ALL-UNNAMED \
+        --add-opens java.base/java.util=ALL-UNNAMED \
+        --add-opens java.base/java.lang=ALL-UNNAMED \
         ${CONTROL_JVM_OPTS}"
 fi
 
